--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,7 +1,7 @@
 {
   "name": "front-end",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,10 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.1.3",
+    "apexcharts": "^4.5.0",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
+    "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.5.0",
+    "react-spinners": "^0.16.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
