--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^4.5.0",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
@@ -27,7 +28,8 @@
     "react-router": "^7.5.0",
     "react-spinners": "^0.16.1",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
