--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
